adds overlay to hero

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
   <main>
     <!-- Hero -->
     <section class="hero">
-      <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
-      <a href="#" class="button ancor">Заказать услугу</a>
+      <div class="overlay">
+        <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
+        <a href="#" class="button ancor">Заказать услугу</a>
+      </div>
+      
     </section>
 
     <!-- Advantages -->
