adds optimized pics

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="container">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="list advantages-list">
-          <li class="advantages-item"><img src="./images/antenna270.svg" class="advan-img" alt="Антенна">
+          <li class="advantages-item"><img src="./images/antenna.svg" class="advan-img" alt="Антенна">
             <h3 class="advantages-titles">Внимание к деталям</h3>
             <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
@@ -104,7 +104,7 @@
             <h3 class="team-names">John Smith</h3>
             <p class="team-jobs">Product designer</p>
             <ul class="icons-list list">
-              <li><a href="" aria-label="Ссылка на Instagram"><img src="./images/insta_white.svg" alt="Instagram"></a></li>
+              <li><a href="" aria-label="Ссылка на Instagram"><img src="./images/insta.svg" alt="Instagram"></a></li>
               <li><a href="" aria-label="Ссылка на Twitter"><img src="./images/twit.svg" alt="Twitter"></a></li>
               <li><a href="" aria-label="Ссылка на Facebook"><img src="./images/fb.svg" alt="Facebook"></a></li>
               <li><a href="" aria-label="Ссылка на Linkedin"><img src="./images/in.svg" alt="Linkedin"></a></li>
@@ -115,7 +115,7 @@
             <h3 class="team-names">Marta Stewart</h3>
             <p class="team-jobs">Frontend Developer</p>
             <ul class="icons-list list">
-              <li><a href="" aria-label="Ссылка на Instagram"><img src="./images/insta_white.svg" alt="Instagram"></a></li>
+              <li><a href="" aria-label="Ссылка на Instagram"><img src="./images/insta.svg" alt="Instagram"></a></li>
               <li><a href="" aria-label="Ссылка на Twitter"><img src="./images/twit.svg" alt="Twitter"></a></li>
               <li><a href="" aria-label="Ссылка на Facebook"><img src="./images/fb.svg" alt="Facebook"></a></li>
               <li><a href="" aria-label="Ссылка на Linkedin"><img src="./images/in.svg" alt="Linkedin"></a></li>
@@ -126,7 +126,7 @@
             <h3 class="team-names">Robert Jakis</h3>
             <p class="team-jobs">Marketing</p>
             <ul class="icons-list list">
-              <li><a href="" aria-label="Ссылка на Instagram"><img src="./images/insta_white.svg" alt="Instagram"></a></li>
+              <li><a href="" aria-label="Ссылка на Instagram"><img src="./images/insta.svg" alt="Instagram"></a></li>
               <li><a href="" aria-label="Ссылка на Twitter"><img src="./images/twit.svg" alt="Twitter"></a></li>
               <li><a href="" aria-label="Ссылка на Facebook"><img src="./images/fb.svg" alt="Facebook"></a></li>
               <li><a href="" aria-label="Ссылка на Linkedin"><img src="./images/in.svg" alt="Linkedin"></a></li>
@@ -137,7 +137,7 @@
             <h3 class="team-names">Martin Doe</h3>
             <p class="team-jobs">UI Designer</p>
             <ul class="icons-list list">
-              <li><a href="" aria-label="Ссылка на Instagram"><img src="./images/insta_white.svg" alt="Instagram"></a></li>
+              <li><a href="" aria-label="Ссылка на Instagram"><img src="./images/insta.svg" alt="Instagram"></a></li>
               <li><a href="" aria-label="Ссылка на Twitter"><img src="./images/twit.svg" alt="Twitter"></a></li>
               <li><a href="" aria-label="Ссылка на Facebook"><img src="./images/fb.svg" alt="Facebook"></a></li>
               <li><a href="" aria-label="Ссылка на Linkedin"><img src="./images/in.svg" alt="Linkedin"></a></li>
@@ -152,12 +152,12 @@
       <h2 class="section-title">Постоянные клиенты</h2>
       <div class="container">
         <ul class="list customers-list">
-          <li class="customers-item"><a href="#" aria-label="Ссылка на YA&CO"><img src="./images/ya.svg" alt="YA&CO"></a></li>
-          <li class="customers-item"><a href="#" aria-label="Ссылка на Company tagline here"><img src="./images/companytagline.svg" alt="Company tagline here"></a></li>
-          <li class="customers-item"><a href="#" aria-label="Ссылка на Company"><img src="./images/company.svg" alt="Company"></a></li>
-          <li class="customers-item"><a href="#" aria-label="Ссылка на Foster Peters"><img src="./images/foster.svg" alt="Foster Peters"></a></li>
-          <li class="customers-item"><a href="#" aria-label="Ссылка на Brand"><img src="./images/brand.svg" alt="Brand"></a></li>
-          <li class="customers-item"><a href="#" aria-label="Ссылка на Company tag line"><img src="./images/companytag.svg" alt="Company tag line"></a></li>
+          <li class="customers-item"><a href="#" aria-label="Ссылка на YA&CO"><img src="./images/Client1.svg" alt="YA&CO"></a></li>
+          <li class="customers-item"><a href="#" aria-label="Ссылка на Company tagline here"><img src="./images/Client2.svg" alt="Company tagline here"></a></li>
+          <li class="customers-item"><a href="#" aria-label="Ссылка на Company"><img src="./images/Client3.svg" alt="Company"></a></li>
+          <li class="customers-item"><a href="#" aria-label="Ссылка на Foster Peters"><img src="./images/Client4.svg" alt="Foster Peters"></a></li>
+          <li class="customers-item"><a href="#" aria-label="Ссылка на Brand"><img src="./images/Client5.svg" alt="Brand"></a></li>
+          <li class="customers-item"><a href="#" aria-label="Ссылка на Company tag line"><img src="./images/Client6.svg" alt="Company tag line"></a></li>
         </ul>
       </div>
     </section>
@@ -177,7 +177,7 @@
       <div class="connect-container footer-container">
         <p class="connect">Присоединяйтесь</p>
       <ul class="list icons-footer">
-        <li class="icon"><a href="#" aria-label="Ссылка на Instagram"><img src="./images/insta_white.svg" alt="Instagram"></a></li>
+        <li class="icon"><a href="#" aria-label="Ссылка на Instagram"><img src="./images/insta.svg" alt="Instagram"></a></li>
         <li class="icon"><a href="#" aria-label="Ссылка на Twitter"><img src="./images/twit.svg" alt="Twitter"></a></li>
         <li class="icon"><a href="#" aria-label="Ссылка на Facebook"><img src="./images/fb.svg" alt="Facebook"></a></li>
         <li class="icon"><a href="#" aria-label="Ссылка на Linkedin"><img src="./images/in.svg" alt="Linkedin"></a></li>
