--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
       </nav>
   
       <ul class="site-auth list">
-        <li class="item"><a href="mailto:info@devstudio.com" class="link ancor">
-          <!-- <img src="./images/mail.svg" alt="иконка"/> -->
-          info@devstudio.com</a></li>
-        <li class="item"><a href="tel:+380961111111" class="link ancor">
-          <!-- <img src="./images/tel.svg" alt="иконка"/> -->
-          +38 096 111 11 11</a></li>
+        <li class="item">
+          <a href="mailto:info@devstudio.com" class="link ancor mail">
+          info@devstudio.com</a>
+        </li>
+        <li class="item">
+          <a href="tel:+380961111111" class="link ancor tel">
+          +38 096 111 11 11</a>
+        </li>
       </ul>
     </div>
   </header>
