adds icons to advantages

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
         <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
         <a href="#" class="button ancor">Заказать услугу</a>
       </div>
-      
     </section>
 
     <!-- Advantages -->
@@ -55,19 +54,19 @@
       <div class="container">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="list advantages-list">
-          <li class="advantages-item"><img src="./images/antenna.svg" class="advan-img" alt="Антенна">
+          <li class="advantages-item antenna">
             <h3 class="advantages-titles">Внимание к деталям</h3>
             <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
-          <li class="advantages-item"><img src="./images/clock.svg" class="advan-img" alt="Часы">
+          <li class="advantages-item clock">
             <h3 class="advantages-titles">Пунктуальность</h3>
             <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
           </li>
-          <li class="advantages-item"><img src="./images/diagram.svg" class="advan-img" alt="Диаграмма">
+          <li class="advantages-item diagram">
             <h3 class="advantages-titles">Планирование</h3>
             <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
           </li>
-          <li class="advantages-item"><img src="./images/astronaut.svg" class="advan-img" alt="Астронавт">
+          <li class="advantages-item astronaut">
             <h3 class="advantages-titles">Современные технологии</h3>
             <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
