--- a/portfolio.html
+++ b/portfolio.html
@@ -8,28 +8,32 @@
   <title>Portfolio</title>
 </head>
 <body>
+
   <header>
     <div class="container topline">
       <nav class="main-nav"> 
         <a href="./index.html" class="logo ancor"><span class="web">Web</span> Studio</a>
   
         <ul class="site-nav list">
-          <li class="item"><a href="./index.html" class="link ancor">Студия</a></li>
-          <li class="item"><a href="./portfolio.html" class="link current ancor">Портфолио</a></li>
+          <li class="item"><a href="./index.html" class="link current ancor">Студия</a></li>
+          <li class="item"><a href="./portfolio.html" class="link ancor">Портфолио</a></li>
           <li class="item"><a href="#" class="link ancor">Контакты</a></li>
         </ul>
       </nav>
   
       <ul class="site-auth list">
-        <li class="item"><a href="mailto:info@devstudio.com" class="link ancor">
-          <!-- <img src="./images/mail.svg" alt="иконка"/> -->
-          info@devstudio.com</a></li>
-        <li class="item"><a href="tel:+380961111111" class="link ancor">
-          <!-- <img src="./images/tel.svg" alt="иконка"/> -->
-          +38 096 111 11 11</a></li>
+        <li class="item">
+          <a href="mailto:info@devstudio.com" class="link ancor mail">
+          info@devstudio.com</a>
+        </li>
+        <li class="item">
+          <a href="tel:+380961111111" class="link ancor tel">
+          +38 096 111 11 11</a>
+        </li>
       </ul>
     </div>
   </header>
+
 
   <main class="main">
 
