--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <main>
     <!-- Hero -->
     <section class="hero">
+
       <div class="overlay">
         <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
         <a href="#" class="button ancor">Заказать услугу</a>
@@ -70,12 +71,13 @@
             <h3 class="advantages-titles">Современные технологии</h3>
             <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
-      </ul>
+        </ul>
       </div>
     </section>
 
     <!-- What we do -->
     <section class="specialization">
+
       <h2 class="section-title">Чем мы занимаемся</h2>
       <div class="container">
         <ul class="list spec-list">
@@ -97,6 +99,7 @@
 
     <!-- Our team -->
     <section class="team">
+
       <h2 class="section-title">Наша команда</h2>
       <div class="container">
         <ul class="list team-list">
@@ -105,21 +108,21 @@
             <h3 class="team-names">John Smith</h3>
             <p class="team-jobs">Product designer</p>
             <ul class="icons-list list">
-              <li><a href="" aria-label="Ссылка на Instagram"><img src="./images/insta.svg" alt="Instagram"></a></li>
-              <li><a href="" aria-label="Ссылка на Twitter"><img src="./images/twit.svg" alt="Twitter"></a></li>
-              <li><a href="" aria-label="Ссылка на Facebook"><img src="./images/fb.svg" alt="Facebook"></a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin"><img src="./images/in.svg" alt="Linkedin"></a></li>
-          </ul>
+              <li><a href="" aria-label="Ссылка на Instagram" class="social insta"></a></li>
+              <li><a href="" aria-label="Ссылка на Twitter" class="social twitter"></a></li>
+              <li><a href="" aria-label="Ссылка на Facebook" class="social facebook"></a></li>
+              <li><a href="" aria-label="Ссылка на Linkedin" class="social linkedin"></a></li>
+            </ul>
           </li>
           <li class="team-item">
             <img src="./images/Marta.jpg" alt="Marta Stewart" width="270">
             <h3 class="team-names">Marta Stewart</h3>
             <p class="team-jobs">Frontend Developer</p>
             <ul class="icons-list list">
-              <li><a href="" aria-label="Ссылка на Instagram"><img src="./images/insta.svg" alt="Instagram"></a></li>
-              <li><a href="" aria-label="Ссылка на Twitter"><img src="./images/twit.svg" alt="Twitter"></a></li>
-              <li><a href="" aria-label="Ссылка на Facebook"><img src="./images/fb.svg" alt="Facebook"></a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin"><img src="./images/in.svg" alt="Linkedin"></a></li>
+              <li><a href="" aria-label="Ссылка на Instagram" class="social insta"></a></li>
+              <li><a href="" aria-label="Ссылка на Twitter" class="social twitter"></a></li>
+              <li><a href="" aria-label="Ссылка на Facebook" class="social facebook"></a></li>
+              <li><a href="" aria-label="Ссылка на Linkedin" class="social linkedin"></a></li>
             </ul>
           </li>
           <li class="team-item">
@@ -127,10 +130,10 @@
             <h3 class="team-names">Robert Jakis</h3>
             <p class="team-jobs">Marketing</p>
             <ul class="icons-list list">
-              <li><a href="" aria-label="Ссылка на Instagram"><img src="./images/insta.svg" alt="Instagram"></a></li>
-              <li><a href="" aria-label="Ссылка на Twitter"><img src="./images/twit.svg" alt="Twitter"></a></li>
-              <li><a href="" aria-label="Ссылка на Facebook"><img src="./images/fb.svg" alt="Facebook"></a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin"><img src="./images/in.svg" alt="Linkedin"></a></li>
+              <li><a href="" aria-label="Ссылка на Instagram" class="social insta"></a></li>
+              <li><a href="" aria-label="Ссылка на Twitter" class="social twitter"></a></li>
+              <li><a href="" aria-label="Ссылка на Facebook" class="social facebook"></a></li>
+              <li><a href="" aria-label="Ссылка на Linkedin" class="social linkedin"></a></li>
             </ul>
           </li>
           <li class="team-item">
@@ -138,10 +141,10 @@
             <h3 class="team-names">Martin Doe</h3>
             <p class="team-jobs">UI Designer</p>
             <ul class="icons-list list">
-              <li><a href="" aria-label="Ссылка на Instagram"><img src="./images/insta.svg" alt="Instagram"></a></li>
-              <li><a href="" aria-label="Ссылка на Twitter"><img src="./images/twit.svg" alt="Twitter"></a></li>
-              <li><a href="" aria-label="Ссылка на Facebook"><img src="./images/fb.svg" alt="Facebook"></a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin"><img src="./images/in.svg" alt="Linkedin"></a></li>
+              <li><a href="" aria-label="Ссылка на Instagram" class="social insta"></a></li>
+              <li><a href="" aria-label="Ссылка на Twitter" class="social twitter"></a></li>
+              <li><a href="" aria-label="Ссылка на Facebook" class="social facebook"></a></li>
+              <li><a href="" aria-label="Ссылка на Linkedin" class="social linkedin"></a></li>
             </ul>
           </li>
         </ul>
@@ -150,6 +153,7 @@
 
     <!-- Regular customers -->
     <section class="customers">
+
       <h2 class="section-title">Постоянные клиенты</h2>
       <div class="container">
         <ul class="list customers-list">
@@ -167,6 +171,7 @@
 
   <!-- Footer -->  
   <footer class="footer">
+
     <div class="container footer-flex">
       <address class="address footer-container">
         <p class="footer-logo"><span class="web">Web</span> Studio</p>
@@ -177,11 +182,11 @@
   
       <div class="connect-container footer-container">
         <p class="connect">Присоединяйтесь</p>
-      <ul class="list icons-footer">
-        <li class="icon"><a href="#" aria-label="Ссылка на Instagram"><img src="./images/insta.svg" alt="Instagram"></a></li>
-        <li class="icon"><a href="#" aria-label="Ссылка на Twitter"><img src="./images/twit.svg" alt="Twitter"></a></li>
-        <li class="icon"><a href="#" aria-label="Ссылка на Facebook"><img src="./images/fb.svg" alt="Facebook"></a></li>
-        <li class="icon"><a href="#" aria-label="Ссылка на Linkedin"><img src="./images/in.svg" alt="Linkedin"></a></li>
+        <ul class="icons-list list">
+          <li><a href="" aria-label="Ссылка на Instagram" class="social insta"></a></li>
+          <li><a href="" aria-label="Ссылка на Twitter" class="social twitter"></a></li>
+          <li><a href="" aria-label="Ссылка на Facebook" class="social facebook"></a></li>
+          <li><a href="" aria-label="Ссылка на Linkedin" class="social linkedin"></a></li>
       </ul>
       </div>
         
