adds svg icons to customers

--- a/index.html
+++ b/index.html
@@ -157,12 +157,35 @@
       <h2 class="section-title">Постоянные клиенты</h2>
       <div class="container">
         <ul class="list customers-list">
-          <li class="customers-item"><a href="#" aria-label="Ссылка на YA&CO"><img src="./images/Client1.svg" alt="YA&CO"></a></li>
-          <li class="customers-item"><a href="#" aria-label="Ссылка на Company tagline here"><img src="./images/Client2.svg" alt="Company tagline here"></a></li>
-          <li class="customers-item"><a href="#" aria-label="Ссылка на Company"><img src="./images/Client3.svg" alt="Company"></a></li>
-          <li class="customers-item"><a href="#" aria-label="Ссылка на Foster Peters"><img src="./images/Client4.svg" alt="Foster Peters"></a></li>
-          <li class="customers-item"><a href="#" aria-label="Ссылка на Brand"><img src="./images/Client5.svg" alt="Brand"></a></li>
-          <li class="customers-item"><a href="#" aria-label="Ссылка на Company tag line"><img src="./images/Client6.svg" alt="Company tag line"></a></li>
+          <li class="customers-item client1">
+            <a href="#" aria-label="Ссылка на YA&CO">
+              <!-- <img src="./images/Client1.svg" alt="YA&CO"> -->
+            </a>
+          </li>
+          <li class="customers-item client2">
+            <a href="#" aria-label="Ссылка на Company tagline here">
+              <!-- <img src="./images/Client2.svg" alt="Company tagline here"> -->
+            </a>
+          </li>
+          <li class="customers-item client3">
+            <a href="#" aria-label="Ссылка на Company">
+              <!-- <img src="./images/Client3.svg" alt="Company"> -->
+            </a>
+          </li>
+          <li class="customers-item client4">
+            <a href="#" aria-label="Ссылка на Foster Peters">
+              <!-- <img src="./images/Client4.svg" alt="Foster Peters"> -->
+            </a>
+          </li>
+          <li class="customers-item client5">
+            <a href="#" aria-label="Ссылка на Brand">
+              <!-- <img src="./images/Client5.svg" alt="Brand"> -->
+            </a></li>
+          <li class="customers-item client6">
+            <a href="#" aria-label="Ссылка на Company tag line">
+              <!-- <img src="./images/Client6.svg" alt="Company tag line"> -->
+            </a>
+          </li>
         </ul>
       </div>
     </section>
