--- a/index.html
+++ b/index.html
@@ -26,12 +26,22 @@
   
       <ul class="site-auth list">
         <li class="item">
-          <a href="mailto:info@devstudio.com" class="link ancor mail">
-          info@devstudio.com</a>
+          <div class="mail-link">
+            <svg class="icon-mail" width="16" height="11.2">
+              <use href="./images/sprite.svg#icon-mail"></use>
+            </svg>
+            <a href="mailto:info@devstudio.com" class="link ancor">
+            info@devstudio.com</a>
+          </div>
         </li>
         <li class="item">
-          <a href="tel:+380961111111" class="link ancor tel">
-          +38 096 111 11 11</a>
+          <div class="tel-link">
+            <svg class="icon-tel" width="10" height="14.94">
+              <use href="./images/sprite.svg#icon-tel"></use>
+            </svg>
+            <a href="tel:+380961111111" class="link ancor">
+              +38 096 111 11 11</a>
+          </div>
         </li>
       </ul>
     </div>
