--- a/index.html
+++ b/index.html
@@ -65,19 +65,39 @@
       <div class="container">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="list advantages-list">
-          <li class="advantages-item antenna">
+          <li class="advantages-item">
+            <div class="advantages-icon-bcg">
+              <svg class="advantages-icon" width="70" height="70">
+                <use href="./images/sprite.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="advantages-titles">Внимание к деталям</h3>
             <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
-          <li class="advantages-item clock">
+          <li class="advantages-item">
+            <div class="advantages-icon-bcg">
+              <svg class="advantages-icon" width="70" height="70">
+                <use href="./images/sprite.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="advantages-titles">Пунктуальность</h3>
             <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
           </li>
-          <li class="advantages-item diagram">
+          <li class="advantages-item">
+            <div class="advantages-icon-bcg">
+              <svg class="advantages-icon" width="70" height="70">
+                <use href="./images/sprite.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="advantages-titles">Планирование</h3>
             <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
           </li>
-          <li class="advantages-item astronaut">
+          <li class="advantages-item">
+            <div class="advantages-icon-bcg">
+              <svg class="advantages-icon" width="70" height="70">
+                <use href="./images/sprite.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="advantages-titles">Современные технологии</h3>
             <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
