--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
   
       <ul class="site-auth list">
         <li class="item">
-          <div class="mail-link">
-            <svg class="icon-mail" width="16" height="11.2">
+          <span class="site-auth-button">
+            <svg class="site-auth-icon" width="16" height="11.2">
               <use href="./images/sprite.svg#icon-mail"></use>
             </svg>
             <a href="mailto:info@devstudio.com" class="link ancor">
             info@devstudio.com</a>
-          </div>
+          </span>
         </li>
         <li class="item">
-          <div class="tel-link">
-            <svg class="icon-tel" width="10" height="14.94">
+          <span class="site-auth-button">
+            <svg class="site-auth-icon" width="10" height="14.94">
               <use href="./images/sprite.svg#icon-tel"></use>
             </svg>
             <a href="tel:+380961111111" class="link ancor">
               +38 096 111 11 11</a>
-          </div>
+          </span>
         </li>
       </ul>
     </div>
