--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <svg class="site-auth-icon" width="16" height="11.2">
               <use href="./images/sprite.svg#icon-mail"></use>
             </svg>
-            <a href="mailto:info@devstudio.com" class="link ancor">
+            <a href="mailto:info@devstudio.com" class="link">
             info@devstudio.com</a>
           </span>
         </li>
@@ -39,7 +39,7 @@
             <svg class="site-auth-icon" width="10" height="14.94">
               <use href="./images/sprite.svg#icon-tel"></use>
             </svg>
-            <a href="tel:+380961111111" class="link ancor">
+            <a href="tel:+380961111111" class="link">
               +38 096 111 11 11</a>
           </span>
         </li>
