removes dammit line near link

--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
       <ul class="site-auth list">
         <li class="item">
           <span class="site-auth-button">
-            
-            <a href="mailto:info@devstudio.com" class="link">
-             <svg class="site-auth-icon" width="16" height="11.2">
+            <a href="mailto:info@devstudio.com" class="site-auth-link">
+              <svg class="site-auth-icon" width="16" height="11.2">
               <use href="./images/sprite.svg#icon-mail"></use>
-             </svg>
+              </svg>
             info@devstudio.com</a>
           </span>
+          
         </li>
         <li class="item">
           <span class="site-auth-button">
-            <svg class="site-auth-icon" width="10" height="14.94">
+            <a href="tel:+380961111111" class="link">
+              <svg class="site-auth-icon" width="10" height="14.94">
               <use href="./images/sprite.svg#icon-tel"></use>
             </svg>
-            <a href="tel:+380961111111" class="link">
               +38 096 111 11 11</a>
           </span>
         </li>
