adds icons to team

--- a/index.html
+++ b/index.html
@@ -133,16 +133,37 @@
 
       <h2 class="section-title">Наша команда</h2>
       <div class="container">
-        <ul class="list team-list">
+        <ul class="team-list list">
           <li class="team-item">
             <img src="./images/John.jpg" alt="John Smith" width="270">
             <h3 class="team-names">John Smith</h3>
             <p class="team-jobs">Product designer</p>
             <ul class="icons-list list">
-              <li><a href="" aria-label="Ссылка на Instagram" class="social insta"></a></li>
-              <li><a href="" aria-label="Ссылка на Twitter" class="social twitter"></a></li>
-              <li><a href="" aria-label="Ссылка на Facebook" class="social facebook"></a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin" class="social linkedin"></a></li>
+              <li>
+                <a href="" aria-label="Ссылка на Instagram">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-insta"></use>
+                </svg>
+              </a>
+            </li>
+              <li><a href="" aria-label="Ссылка на Twitter">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-twit"></use>
+                </svg>
+              </a>
+            </li>
+              <li><a href="" aria-label="Ссылка на Facebook">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-fb"></use>
+                </svg>
+              </a>
+            </li>
+              <li><a href="" aria-label="Ссылка на Linkedin">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-in"></use>
+                </svg>
+              </a>
+            </li>
             </ul>
           </li>
           <li class="team-item">
@@ -150,10 +171,31 @@
             <h3 class="team-names">Marta Stewart</h3>
             <p class="team-jobs">Frontend Developer</p>
             <ul class="icons-list list">
-              <li><a href="" aria-label="Ссылка на Instagram" class="social insta"></a></li>
-              <li><a href="" aria-label="Ссылка на Twitter" class="social twitter"></a></li>
-              <li><a href="" aria-label="Ссылка на Facebook" class="social facebook"></a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin" class="social linkedin"></a></li>
+              <li>
+                <a href="" aria-label="Ссылка на Instagram">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-insta"></use>
+                </svg>
+              </a>
+            </li>
+              <li><a href="" aria-label="Ссылка на Twitter">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-twit"></use>
+                </svg>
+              </a>
+            </li>
+              <li><a href="" aria-label="Ссылка на Facebook">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-fb"></use>
+                </svg>
+              </a>
+            </li>
+              <li><a href="" aria-label="Ссылка на Linkedin">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-in"></use>
+                </svg>
+              </a>
+            </li>
             </ul>
           </li>
           <li class="team-item">
@@ -161,10 +203,31 @@
             <h3 class="team-names">Robert Jakis</h3>
             <p class="team-jobs">Marketing</p>
             <ul class="icons-list list">
-              <li><a href="" aria-label="Ссылка на Instagram" class="social insta"></a></li>
-              <li><a href="" aria-label="Ссылка на Twitter" class="social twitter"></a></li>
-              <li><a href="" aria-label="Ссылка на Facebook" class="social facebook"></a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin" class="social linkedin"></a></li>
+              <li>
+                <a href="" aria-label="Ссылка на Instagram">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-insta"></use>
+                </svg>
+              </a>
+            </li>
+              <li><a href="" aria-label="Ссылка на Twitter">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-twit"></use>
+                </svg>
+              </a>
+            </li>
+              <li><a href="" aria-label="Ссылка на Facebook">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-fb"></use>
+                </svg>
+              </a>
+            </li>
+              <li><a href="" aria-label="Ссылка на Linkedin">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-in"></use>
+                </svg>
+              </a>
+            </li>
             </ul>
           </li>
           <li class="team-item">
@@ -172,10 +235,31 @@
             <h3 class="team-names">Martin Doe</h3>
             <p class="team-jobs">UI Designer</p>
             <ul class="icons-list list">
-              <li><a href="" aria-label="Ссылка на Instagram" class="social insta"></a></li>
-              <li><a href="" aria-label="Ссылка на Twitter" class="social twitter"></a></li>
-              <li><a href="" aria-label="Ссылка на Facebook" class="social facebook"></a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin" class="social linkedin"></a></li>
+              <li>
+                <a href="" aria-label="Ссылка на Instagram">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-insta"></use>
+                </svg>
+              </a>
+            </li>
+              <li><a href="" aria-label="Ссылка на Twitter">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-twit"></use>
+                </svg>
+              </a>
+            </li>
+              <li><a href="" aria-label="Ссылка на Facebook">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-fb"></use>
+                </svg>
+              </a>
+            </li>
+              <li><a href="" aria-label="Ссылка на Linkedin">
+                <svg class="team-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-in"></use>
+                </svg>
+              </a>
+            </li>
             </ul>
           </li>
         </ul>
