adds clients icons hover

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <ul class="site-auth list">
         <li class="item">
           <span class="site-auth-button">
-            <a href="mailto:info@devstudio.com" class="site-auth-link">
+            <a href="mailto:info@devstudio.com" class="site-auth-link link">
               <svg class="site-auth-icon" width="16" height="11.2">
               <use href="./images/sprite.svg#icon-mail"></use>
               </svg>
@@ -37,7 +37,7 @@
         </li>
         <li class="item">
           <span class="site-auth-button">
-            <a href="tel:+380961111111" class="link">
+            <a href="tel:+380961111111" class="site-auth-link link">
               <svg class="site-auth-icon" width="10" height="14.94">
               <use href="./images/sprite.svg#icon-tel"></use>
             </svg>
@@ -272,34 +272,58 @@
       <h2 class="section-title">Постоянные клиенты</h2>
       <div class="container">
         <ul class="list customers-list">
-          <li class="customers-item client1">
-            <a href="#" aria-label="Ссылка на YA&CO">
-              <!-- <img src="./images/Client1.svg" alt="YA&CO"> -->
+          <li class="customers-item">
+            <div class="customers-link">
+              <a href="#" aria-label="Ссылка на YA&CO">
+                <svg class="customers-icon" width="44.27" height="49.23">
+                  <use href="./images/sprite.svg#icon-client1"></use>
+                </svg>
+              </div>
             </a>
           </li>
-          <li class="customers-item client2">
-            <a href="#" aria-label="Ссылка на Company tagline here">
-              <!-- <img src="./images/Client2.svg" alt="Company tagline here"> -->
-            </a>
+          <li class="customers-item">
+            <div class="customers-link">
+              <a href="#" aria-label="Ссылка на Company tagline here">
+                <svg class="customers-icon" width="40" height="52">
+                  <use href="./images/sprite.svg#icon-client2"></use>
+                </svg> 
+              </a>
+            </div>
+          </li> 
+          <li class="customers-item">
+            <div class="customers-link">
+              <a href="#" aria-label="Ссылка на Company">
+                <svg class="customers-icon" width="41" height="42.6">
+                  <use href="./images/sprite.svg#icon-client3"></use>
+                </svg> 
+              </a>
+            </div>
           </li>
-          <li class="customers-item client3">
-            <a href="#" aria-label="Ссылка на Company">
-              <!-- <img src="./images/Client3.svg" alt="Company"> -->
-            </a>
+          <li class="customers-item"> 
+            <div class="customers-link">
+              <a href="#" aria-label="Ссылка на Foster Peters">
+                <svg class="customers-icon" width="79.66" height="42.02">
+                  <use href="./images/sprite.svg#icon-client4"></use>
+                </svg> 
+              </a>
+            </div>
           </li>
-          <li class="customers-item client4">
-            <a href="#" aria-label="Ссылка на Foster Peters">
-              <!-- <img src="./images/Client4.svg" alt="Foster Peters"> -->
-            </a>
-          </li>
-          <li class="customers-item client5">
-            <a href="#" aria-label="Ссылка на Brand">
-              <!-- <img src="./images/Client5.svg" alt="Brand"> -->
-            </a></li>
-          <li class="customers-item client6">
-            <a href="#" aria-label="Ссылка на Company tag line">
-              <!-- <img src="./images/Client6.svg" alt="Company tag line"> -->
-            </a>
+          <li class="customers-item">
+            <div class="customers-link">
+              <a href="#" aria-label="Ссылка на Brand">
+                <svg class="customers-icon" width="59" height="47">
+                  <use href="./images/sprite.svg#icon-client5"></use>
+                </svg> 
+              </a>
+            </div>
+          <li class="customers-item">
+            <div class="customers-link">
+              <a href="#" aria-label="Ссылка на Compane tag line">
+                <svg class="customers-icon" width="88.48" height="45.44">
+                  <use href="./images/sprite.svg#icon-client6"></use>
+                </svg> 
+              </a>
+            </div>
           </li>
         </ul>
       </div>
@@ -321,10 +345,31 @@
       <div class="connect-container footer-container">
         <p class="connect">Присоединяйтесь</p>
         <ul class="icons-list list">
-          <li><a href="" aria-label="Ссылка на Instagram" class="social insta"></a></li>
-          <li><a href="" aria-label="Ссылка на Twitter" class="social twitter"></a></li>
-          <li><a href="" aria-label="Ссылка на Facebook" class="social facebook"></a></li>
-          <li><a href="" aria-label="Ссылка на Linkedin" class="social linkedin"></a></li>
+          <li>
+            <a href="" aria-label="Ссылка на Instagram">
+            <svg class="team-icon" width="44" height="44">
+              <use href="./images/sprite.svg#icon-insta"></use>
+            </svg>
+          </a>
+        </li>
+          <li><a href="" aria-label="Ссылка на Twitter">
+            <svg class="team-icon" width="44" height="44">
+              <use href="./images/sprite.svg#icon-twit"></use>
+            </svg>
+          </a>
+        </li>
+          <li><a href="" aria-label="Ссылка на Facebook">
+            <svg class="team-icon" width="44" height="44">
+              <use href="./images/sprite.svg#icon-fb"></use>
+            </svg>
+          </a>
+        </li>
+          <li><a href="" aria-label="Ссылка на Linkedin">
+            <svg class="team-icon" width="44" height="44">
+              <use href="./images/sprite.svg#icon-in"></use>
+            </svg>
+          </a>
+        </li>
       </ul>
       </div>
         
